--- a/fase-0/ansible/playbooks/install_lamp.yml
+++ b/fase-0/ansible/playbooks/install_lamp.yml
@@ -30,13 +30,13 @@
 
     - name: Copiado del template 000-default.conf.j2 a la ruta /etc/apache2/sites-available
       ansible.builtin.template:
-        src: "{{ LocalSource_000_default }}"
+        src: "{{ Template_000_default.Local_Source }}"
         dest: /etc/apache2/sites-available/000-default.conf
         mode: 0644
 
     - name: Copiado del template dir.conf.j2 a la ruta /etc/apache2/mods-available
       ansible.builtin.template:
-        src: "{{ LocalSource_dir }}"
+        src: "{{ Template_dir.Local_Source }}"
         dest: /etc/apache2/mods-available/dir.conf
         mode: 0644
 
