Se hace uso de tags para los playbooks
Se usan tags en los playbooks para ejecutar uno o varios en concreto mediante 'ansible-playbook .. --tags TAG/S' o saltar uno o varios mediante 'ansible-playbook .. --skip-tags TAG/S'

--- a/fase-0/ansible/main.yml
+++ b/fase-0/ansible/main.yml
@@ -3,11 +3,14 @@
 - name: Importación de playbook para instalar la pila LAMP
   ansible.builtin.import_playbook:
     playbooks/install_lamp.yml
+  tags: lamp
 
 - name: Importación de playbook para preparar HTTPS
   ansible.builtin.import_playbook:
     playbooks/https.yml
+  tags: certificado
 
 - name: Importación de playbook para el despliegue de WordPress
   ansible.builtin.import_playbook:
     playbooks/deploy_wordpress.yml
+  tags: wordpress
