Actualización de fase-2 con respecto a Certbot y Let's Encrypt
Se actualiza la fase para saltar por defecto el playbook completo de la instalación de Certbot mediante Snap y la obtención del certificado de Let's Encrypt

--- a/fase-2/ansible/main.yml
+++ b/fase-2/ansible/main.yml
@@ -15,6 +15,7 @@
 - name: Ejecución del playbook de obtención del certificado de Let's Encrypt
   ansible.builtin.import_playbook:
     playbooks/https.yml
+  when: certificado | d(False) == "descargar"
 
 - name: Ejecución del playbook de preparación de los equipos frontend
   ansible.builtin.import_playbook:
